@@ -244,10 +244,13 @@ int LuaContext::main_api_load_settings(lua_State* l) {
       LuaTools::error(l, "Cannot load settings: no write directory was specified in quest.dat");
     }
 
-    Settings settings;
-    bool success = settings.load(file_name);
-    if (success) {
-      settings.apply_to_quest();
+    bool success = false;
+    if (QuestFiles::data_file_exists(file_name)) {
+      Settings settings;
+      success = settings.load(file_name);
+      if (success) {
+        settings.apply_to_quest();
+      }
     }
 
     lua_pushboolean(l, success);
